--- a/Controller/pom.xml
+++ b/Controller/pom.xml
@@ -36,8 +36,9 @@
             <version>5.2.1.RELEASE</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <groupId>nz.net.ultraq.thymeleaf</groupId>
+            <artifactId>thymeleaf-layout-dialect</artifactId>
+            <version>2.0.5</version>
         </dependency>
     </dependencies>
 
