--- a/Controller/src/main/resources/application.properties
+++ b/Controller/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.security.user.name=abc
 spring.security.user.password=abc
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.data.rest.base-path=api
 
 security.oauth2.client.clientId =836845369110-sqgfnf0i6lkpl8jb28bvprvf935tarlq.apps.googleusercontent.com
 security.oauth2.client.clientSecret =lxv4I6XzJLZbgclsKDbXohEx
