--- a/Controller/src/main/resources/application.properties
+++ b/Controller/src/main/resources/application.properties
@@ -21,5 +21,7 @@ security.oauth2.client.scope = profile email
 
 security.oauth2.resource.userInfoUri  =  https://www.googleapis.com/userinfo/v2/me
 security.oauth2.resource.preferTokenInfo = false
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.maxRequestSize = 20MB
 
 
