--- a/Controller/src/main/resources/application.properties
+++ b/Controller/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=howto
 spring.datasource.password=howto!@#
 spring.datasource.url=jdbc:postgresql://110.74.194.125:5432/howto_7th
+#spring.datasource.url=jdbc:postgresql://localhost:5432/howto_7th
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
