--- a/Controller/src/main/resources/application.properties
+++ b/Controller/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=howto
-spring.datasource.password=howto123!@#
-# spring.datasource.url=jdbc:postgresql://110.74.194.125:5432/howto_7th
+spring.datasource.password=howto!@#
+spring.datasource.url=jdbc:postgresql://110.74.194.125:5432/howto_7th
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -26,8 +26,7 @@ security.oauth2.resource.userInfoUri  =  https://www.googleapis.com/userinfo/v2/
 security.oauth2.resource.preferTokenInfo = false
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.maxRequestSize = 20MB
-spring.datasource.url= jdbc:postgresql://localhost:5432/howto_7th
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 
 
 
