--- a/Controller/src/main/resources/application.properties
+++ b/Controller/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=howto
-spring.datasource.password=howto!@#
-spring.datasource.url=jdbc:postgresql://110.74.194.125:5432/howto_7th
+spring.datasource.username=postgres
+spring.datasource.password=123
+#spring.datasource.url=jdbc:postgresql://110.74.194.125:5432/howto_7th
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -9,6 +9,12 @@ spring.security.user.name=abc
 spring.security.user.password=abc
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.data.rest.base-path=api
+
+
+
+spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 
 security.oauth2.client.clientId =836845369110-sqgfnf0i6lkpl8jb28bvprvf935tarlq.apps.googleusercontent.com
 security.oauth2.client.clientSecret =lxv4I6XzJLZbgclsKDbXohEx
