--- a/Controller/src/main/resources/application.properties
+++ b/Controller/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.username=howto
 spring.datasource.password=howto!@#
- spring.datasource.url=jdbc:postgresql://110.74.194.125:5432/howto_7th
+spring.datasource.url=jdbc:postgresql://localhost:5432/howto_7th
 
-spring.datasource.username=postgres
-spring.datasource.password=123
+# spring.datasource.username=postgres
+# spring.datasource.password=123
 # spring.datasource.url=jdbc:postgresql://110.74.194.125:5432/howto_7th
 
 spring.jpa.generate-ddl=true
@@ -36,7 +36,7 @@ spring.servlet.multipart.maxRequestSize = 20MB
 #spring.datasource.url= jdbc:postgresql://localhost:5432/howto_7th
 # spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
+# spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 
