--- a/Controller/pom.xml
+++ b/Controller/pom.xml
@@ -50,6 +50,12 @@
             <artifactId>google-api-client</artifactId>
             <version>1.30.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+            <version>3.0.4.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
 </project>
