--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
+        <dependency>
+			<groupId>com.corundumstudio.socketio</groupId>
+			<artifactId>netty-socketio</artifactId>
+			<version>1.7.16</version>
+		</dependency>
     </dependencies>
 
     <build>
