--- a/Controller/src/main/resources/application.properties
+++ b/Controller/src/main/resources/application.properties
@@ -1,13 +1,11 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=howto
+#spring.datasource.username=howto
  
-spring.datasource.password=howto!@#
-# spring.datasource.url=jdbc:postgresql://localhost:5432/howto_7th
+#spring.datasource.password=howto!@#
+#spring.datasource.url=jdbc:postgresql://110.74.194.125:5432/howto_7th
 
-# spring.datasource.username=postgres
-# spring.datasource.password=123
- 
-spring.datasource.url=jdbc:postgresql://110.74.194.125:5432/howto_7th
+ spring.datasource.username=postgres
+ spring.datasource.password=1609
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -33,10 +31,10 @@ security.oauth2.resource.preferTokenInfo = false
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.maxRequestSize = 20MB
  
-#spring.datasource.url= jdbc:postgresql://localhost:5432/howto_7th
+spring.datasource.url= jdbc:postgresql://localhost:5432/howto_7th
 # spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
  
 
