--- a/Controller/src/main/resources/application.properties
+++ b/Controller/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=howto
- 
+
 spring.datasource.password=howto!@#
-# spring.datasource.url=jdbc:postgresql://localhost:5432/howto_7th
+# spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 
 # spring.datasource.username=postgres
 # spring.datasource.password=123
