--- a/Controller/src/main/resources/application.properties
+++ b/Controller/src/main/resources/application.properties
@@ -2,12 +2,12 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=howto
  
 spring.datasource.password=howto!@#
-# spring.datasource.url=jdbc:postgresql://localhost:5432/howto_7th
+spring.datasource.url=jdbc:postgresql://localhost:5432/howto_7th
 
 # spring.datasource.username=postgres
 # spring.datasource.password=123
- 
-spring.datasource.url=jdbc:postgresql://110.74.194.125:5432/howto_7th
+#  
+# spring.datasource.url=jdbc:postgresql://110.74.194.125:5432/howto_7th
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -18,6 +18,10 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.data.rest.base-path=api
 spring.thymeleaf.mode=LEGACYHTML5
 spring.jackson.serialization.fail-on-empty-beans=false
+spring.datasource.initialization-mode=always
+spring.datasource.initialize=true
+spring.datasource.schema=classpath:/schema-postgres.sql
+spring.datasource.continue-on-error=true
 
 security.oauth2.client.clientId =836845369110-sqgfnf0i6lkpl8jb28bvprvf935tarlq.apps.googleusercontent.com
 security.oauth2.client.clientSecret =lxv4I6XzJLZbgclsKDbXohEx
