--- a/Controller/src/main/resources/application.properties
+++ b/Controller/src/main/resources/application.properties
@@ -41,5 +41,27 @@ spring.servlet.multipart.maxRequestSize = 20MB
 
 # spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
 # spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+#spring.mail.username= khmerhowtodo@gmail.com
+#spring.mail.password= kht112233
+spring.mail.username= kunloeskhmer@gmail.com
+spring.mail.password= kls@hrd7
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+# Other properties
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
+
+#spring.mail.properties.mail.smtp.socketFactory.port = 465
+#spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
  
 
